Fix T38541: sys.exit fails when blender is built as a py-module